--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "main": "server/index.js",
   "dependencies": {
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "http-proxy-middleware": "^0.20.0",
     "massive": "^6.1.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
